--- a/src/css/01-gallery.css
+++ b/src/css/01-gallery.css
@@ -1,3 +1,5 @@
+@import "../../node_modules/simplelightbox/dist/simple-lightbox.min.css";
+
 :root {
   --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   --animation-duration: 250ms;
@@ -10,6 +12,8 @@
   grid-auto-rows: 240px;
   grid-gap: 12px;
   justify-content: center;
+  padding: 0;
+  list-style: none;
   margin-left: auto;
   margin-right: auto;
 }
